--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
 
       <hr>
 
-      
+      <!-- task list counter  -->
+      <div class="counter-container">
+        <div id="task-counters">
+          Completed: <span id="completed-counter">0</span> | Uncompleted:
+          <span id="uncompleted-counter">0</span>
+        </div>
+      </div>
+    </div>
 
     <script type="text/javascript" src="script.js"></script>
   </body>
